--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -44,7 +44,7 @@ Entries which require special treatment are marked with comments starting with '
 <bookinfo>
   <title>&kdevelop; User Manual</title>
 
-  <date>2004-03-10</date>
+  <date>2004-03-26</date>
   <releaseinfo>&kdevrelease;</releaseinfo>
 
   <authorgroup>
@@ -213,25 +213,36 @@ There should be an additional FAQ section near the end nevertheless which contai
 <para>
 The information in this chapter is meant as a quick reference for a head start or if you (momentarily) forgot about some basic concept. If you want more information on a topic, just follow the link in the title starting that advice.
 </para>
+<para>
+Information on these topics is availabe:
+</para>
+<simplelist>
+  <member><link linkend="nutshellitem-look-and-feel">Look and Feel</link></member>
+  <member><link linkend="nutshellitem-projects">Projects</link></member>
+  <member><link linkend="nutshellitem-compilation">Compilation</link></member>
+  <member><link linkend="nutshellitem-automake">&automanag;</link></member>
+  <member><link linkend="nutshellitem-compilemake">Compile/Make Problems</link></member>
+</simplelist>
 
-<itemizedlist>
+<itemizedlist id="nutshellitem-look-and-feel">
   <title>Look and Feel</title>
 
-  <!-- ### change this entry when the gui is available -->
   <listitem>
     <formalpara id="nutshell-IDEAl-tabs">
-    <title>Force Smaller Tool View Tabs in IDEAl Mode</title>
+    <title><link linkend="setup-ui-toolview">Force Smaller Tool View Tabs in IDEAl Mode</link></title>
     <para>
-      In more recent versions (most notably from CVS HEAD) &kdevelop; will start with large text-based tool tip tabs around the work area. You may change this look if you place a <computeroutput>MDIStyle</computeroutput> entry under the <computeroutput>[UI]</computeroutput> tag in your <filename>$KDEHOME/share/config/kdeveloprc</filename> configuration file as follows:
+      By default &kdevelop; starts with large text-based tool tip tabs around the work area. You may change this look to &eg; save space in the &kdevelop; configuration dialog (<menuchoice><guimenu>Settings</guimenu> <guimenuitem>Configure KDevelop...</guimenuitem> <guimenuitem>User Interface</guimenuitem></menuchoice>).
     </para>
     </formalpara>
+    <para>
+      If you use an older &kdevelop; 3 version, this configuration dialog may not be available. To change the toolview tabs display manually, place a <computeroutput>MDIStyle</computeroutput> entry under the <computeroutput>[UI]</computeroutput> tag in your <filename>$KDEHOME/share/config/kdeveloprc</filename> configuration file as follows:
+    </para>
     <simplelist>
       <member><computeroutput>MDIStyle=0</computeroutput>: icons only</member>
       <member><computeroutput>MDIStyle=1</computeroutput>: text only (default)</member>
-      <member><computeroutput>MDIStyle=2</computeroutput>: icons only on smaller tabs</member>
+      <member><computeroutput>MDIStyle=2</computeroutput>: icons only on smaller tabs (not very useful)</member>
       <member><computeroutput>MDIStyle=3</computeroutput>: icons and text</member>
     </simplelist>
-    <para>(This manual change effort is only preliminary. There will be a &GUI; configuration possibility some time in the future.)</para>
   </listitem>
 
   <!-- ### remove this entry when the bug is repaired -->
@@ -272,7 +283,7 @@ The information in this chapter is meant as a quick reference for a head start o
 
 </itemizedlist>
 
-<itemizedlist>
+<itemizedlist id="nutshellitem-projects">
 <title>Projects</title>
 
   <listitem>
@@ -303,7 +314,7 @@ The information in this chapter is meant as a quick reference for a head start o
   </listitem>
 </itemizedlist>
 
-<itemizedlist>
+<itemizedlist id="nutshellitem-compilation">
 <title>Compilation</title>
   <listitem>
     <formalpara id="nutshell-compilemsg-detail">
@@ -315,7 +326,7 @@ The information in this chapter is meant as a quick reference for a head start o
   </listitem>
 </itemizedlist>
 
-<itemizedlist>
+<itemizedlist id="nutshellitem-automake">
 <title><link linkend="automake-manager">&automanag;</link></title>
 
     <listitem>
@@ -348,7 +359,7 @@ The information in this chapter is meant as a quick reference for a head start o
     </listitem>
   </itemizedlist>
 
-<itemizedlist>
+<itemizedlist id="nutshellitem-compilemake">
   <title>Compile/Make Problems</title>
 
   <listitem>
@@ -448,7 +459,7 @@ from the <guimenu>Project</guimenu> menu.  You should see the Import Directory W
 <itemizedlist>
   <title>Features (preliminary overview)</title>
   <listitem><para>
-  SnippetPart adds a tool-view which by default docs to the right
+  SnippetPart adds a tool-view which by default docks to the right
   </para></listitem>
   <listitem><para>
   Adding, editing and removing of snippets is available via a popup-menu
@@ -1054,7 +1065,7 @@ Documentation has multiple facets. There is
     <emphasis>external API documentation</emphasis> of &eg; common system libraries (<application>KDE</application>, <application>Qt</application>, &etc;)
     </para></listitem>
     <listitem><para>
-    any other documentation (programming language manuals, general system information, HowTo articles and the like)
+    any other documentation (programming language manuals, general system information, how-to articles and the like)
     </para></listitem>
   </itemizedlist>
   </para></listitem>
@@ -1371,7 +1382,7 @@ they are easily readable. Alternatively, you can decide to see mangled names.
 </para>
 
 <formalpara>
-<title>Try Setting BPs on Lib Load</title>
+<title>Try Setting Breakpoints on Lib Load</title>
 <indexterm zone="debugger"><primary>lazy breakpoints</primary></indexterm>
 <indexterm zone="debugger"><primary>breakpoints</primary><secondary>lazy</secondary></indexterm>
 
